--- a/backend/.env
+++ b/backend/.env
@@ -3,8 +3,11 @@ CLOUDINARY_API_KEY=819224586478434
 CLOUDINARY_API_SECRET=yr_TbbT_JDG2Xfu4KcrrcykeJvA
 CLOUDINARY_CLOUD_NAME=dtgsdprcl
 FRONTEND_URL=http://localhost:5173
-DB_URL=mongodb+srv://exclusiveabhi:maCdjaRpoWvGczS5@cluster0.1vxqfqv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URL=mongodb+srv://kdurgaeswar:aNKFOE3U1e07kUvn@cluster0.qkfzo7j.mongodb.net/jobportal?retryWrites=true&w=majority&appName=Cluster0
+
 JWT_SECRET_KEY=fgjfgsudgfudnhfousidfnewuikfmlewf
 JWT_EXPIRE=7d
 COOKIE_EXPIRE=7
 NODE_ENV=development
+
+
